--- a/package.json
+++ b/package.json
@@ -5,23 +5,11 @@
   "repository": "ReactTraining/history",
   "license": "MIT",
   "author": "Michael Jackson",
-  "main": "index.js",
-  "module": "esm/history.js",
+  "main": "modules/index.js",
+  "module": "modules/index.js",
   "unpkg": "umd/history.js",
   "files": [
-    "DOMUtils.js",
-    "ExecutionEnvironment.js",
-    "LocationUtils.js",
-    "PathUtils.js",
-    "cjs",
-    "createBrowserHistory.js",
-    "createHashHistory.js",
-    "createMemoryHistory.js",
-    "createTransitionManager.js",
-    "es",
-    "esm",
-    "umd",
-    "warnAboutDeprecatedCJSRequire.js"
+    "modules/*"
   ],
   "sideEffects": false,
   "scripts": {
